# Tend

./: .gitignore  Cargo.toml  ROADMAP.md
contracts/: foundry.toml  remappings.txt
contracts/script/: DeployAutopilotHook.s.sol  DepositOnly.s.sol  E2EFixture.s.sol
contracts/src/: AutopilotHook.sol
contracts/test/: AutopilotHook.fork.t.sol  AutopilotHook.t.sol  DeployAutopilotHook.t.sol
crates/lpa/: Cargo.toml  build.rs
crates/lpa/src/: cfg.rs  main.rs  pipeline_tests.rs  proto.rs
crates/lpa/src/chain/: config.rs  mod.rs  state_view.rs  subscriber.rs
crates/lpa/src/exec/: cost.rs  mod.rs
crates/lpa/src/position/: tracker.rs
crates/lpa/src/serve/: mod.rs  strategy_service.rs
crates/lpa/src/strategy/: ev.rs  il.rs  math.rs  mod.rs
proto/: autopilot.proto  buf.yaml
