[workspace]
members = ["crates/lpa"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
tonic-reflection = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
alloy = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dashmap = "6"
futures-util = "0.3"
tempfile = "3"
proptest = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
