[package]
name = "lpa"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lpa"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-web = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
alloy = { workspace = true }
rusqlite = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
